<?xml version="1.0" encoding="utf-8"?>
<resources
  xmlns:tools="http://schemas.android.com/tools"
  tools:ignore="MissingTranslation" >

    <string name="app_name">Survey</string>
    <string name="action_settings">Settings</string>
    <string name="start_survey">Start Survey</string>
    <string name="survey_title_label">Choose instrument</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="finish_button">Finish</string>
    <string name="skip_button">Skip</string>
    <string name="other_specify">Other</string>
    <string name="other_specify_edittext">Specify other</string>
    <string name="free_response_edittext">Answer here</string>
    <string name="refresh">Refresh</string>
    <string name="device_identifier">Device Identifier</string>
    <string name="sync_interval">Sync Interval (minutes)</string>
    <string name="save_button">Save</string>
    <string name="admin_settings">Admin</string>
    <string name="api_endpoint">Api Domain Name</string>
    <string name="api_key">Api Key</string>
    <string name="api_version">Api Version</string>
    <string name="project_id">Project Id</string>
    <string name="last_update">Last update:  </string>
    <string name="sync_notification_text">Syncing with server...</string>   
    <string name="sync_notification_complete_text">Syncing with server complete.</string>    
    <string name="network_unavailable">No network available on the device.</string> 
    <string name="api_unavailable">Remote api is not responsive.</string>   
    <string name="unacceptable_version_code">You must upgrade your application before continuing.</string>   
    <string name="surveys">surveys</string>  
    <string name="hello">Hello World</string>
    <string name="questions">questions</string> 
    <string name="question">question</string> 
    <string name="encryption_required_title">Encryption required</string> 
    <string name="encryption_required_text">This application requires that the device be encrypted.  Please encrypt your device to continue.</string>
    <string name="okay">OK</string>
    <string name="password_title">Enter password</string>
    <string name="password_message">This action requires a password.  Please enter the password below.</string>
    <string name="cancel">Cancel</string>
    <string name="incorrect_password">This password is incorrect.</string>
    <string name="custom_locale">Custom ISO-639-1 Code</string>
    <string name="not_valid_response">This is not a valid response for this question.</string>
    <string name="of">of</string>
    <string name="instrument_loading_progress_header">Loading</string>
    <string name="instrument_loading_progress_message">Please wait one moment.</string>
    <string name="instrument_not_loaded">There was an issue loading this instrument.  Please re-sync the device and try again.</string>
    <string name="and">and</string>
    <string name="comma">,</string>
    <string name="space">" "</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="instruments">Instruments</string>
    <string name="show_surveys">Show Surveys</string>
    <string name="version_code">Version Code: </string>
    <string name="unidentified_survey">Unidentified Survey </string>
    <string name="system_information">System Information</string>
    <string name="feature_toggle">Feature Toggle</string>
    <string name="sync_settings">Sync Settings</string>
    <string name="enable_camera">Enable Camera</string>
    <string name="take">Take</string>
    <string name="show_skip">Show Skip</string>
    <string name="show_na">Show NA</string>
    <string name="show_dk">Show DK</string>
    <string name="show_rf">Show RF</string>
    <string name="sk">Skip this question</string>
    <string name="rf">Refuse to answer this question</string>
    <string name="dk">Don\'t know</string>
    <string name="na">Not applicable</string>
    <string name="desc"></string>
    <string name="device_label">Device Label</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="new_apk">This application has a newer version. Would you like to update it to the newer version?</string>
    <string name="require_password">Require Password To Enter Survey</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="invalid_username_or_password">Invalid username or password.</string>
    <string name="rule_failure_survey_timing">You cannot take a survey for this instrument at this time.</string>
    <string name="rule_failure_instrument_survey_limit">You cannot take a survey for this instrument.  You have taken the maximum number of surveys allowed.</string>
    <string name="rule_instrument_survey_limit_per_minute">You cannot take a survey for this instrument. You have taken the maximum number of surveys allowed for this time interval.</string>
    <string name="rule_failure_instrument_launch">You cannot launch a survey for this instrument from this app.  Please create a survey from the appropriate application.</string>
    <string name="version">version</string>
    <string name="record_survey_location">Record Survey Location</string>
    <string name="event_log_sent_survey">Sent %1$s for %2$s.</string>
    <string name="delete">Delete</string>
    <string name="delete_surveys_title">Delete Selected Surveys?</string>
    <string name="delete_surveys_message">You will not be able to recover the surveys once you delete them!</string>
    <string name="encryption_password_create_confirmation">Confirmation</string>
    <string name="encryption_password_create_instructions">Please choose a password and enter it below.</string>
    <string name="encryption_password_instructions">Please enter your password below to decrypt.</string>
</resources>
