<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
   <item android:id="@+id/menu_item_previous"
     android:icon="@drawable/ic_menu_item_previous_item" 
     android:title="@string/previous_button"
     android:showAsAction="always|withText" />
   <item android:id="@+id/menu_item_skip"
     android:title="@string/sk"
     android:icon="@drawable/ic_menu_item_sk" 
     android:showAsAction="always" />
   <item android:id="@+id/menu_item_rf"
     android:title="@string/rf"
     android:icon="@drawable/ic_menu_item_rf" 
     android:showAsAction="always" />
   <item android:id="@+id/menu_item_na"
     android:title="@string/na"
     android:icon="@drawable/ic_menu_item_na" 
     android:showAsAction="always" />
  <item android:id="@+id/menu_item_dk"
     android:title="@string/dk"
     android:icon="@drawable/ic_menu_item_dk" 
     android:showAsAction="always" />
   <item android:id="@+id/menu_item_next"
     android:icon="@drawable/ic_menu_item_next_item" 
     android:title="@string/next_button"
     android:showAsAction="always|withText" />
   <item android:id="@+id/menu_item_finish"
     android:icon="@drawable/ic_menu_item_accept" 
     android:title="@string/finish_button"
     android:showAsAction="always|withText"
     android:visibility="gone" />
</menu>
