<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/encryption_password_create_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/encryption_password_create_instructions"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/encryption_password_create_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp" />

    <EditText
        android:id="@+id/encryption_password_create_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"        
        android:inputType="textPassword">
    </EditText>

    <TextView
        android:id="@+id/encryption_password_create_confirmation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encryption_password_create_confirmation"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/encryption_password_create_confirmation_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textPassword" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/encryption_password_create_done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="18dp"
            android:text="@string/okay"
            android:width="200dp" />
        
    </LinearLayout>

</LinearLayout>