<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_title_label"
        style="?android:listSeparatorTextViewStyle" />
    
    <Spinner
        android:id="@+id/instruments_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right|center_vertical" >
        
        <Button
            android:id="@+id/admin_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal|right"
            android:text="@string/admin_settings"
            android:layout_marginTop="6dp" />
        
        <Button
            android:id="@+id/refresh_instruments_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal|right"
            android:text="@string/refresh_instruments"
            android:layout_marginTop="6dp" />

        <Button
            android:id="@+id/start_survey_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal|right"
            android:text="@string/start_survey"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="6dp" />

    </LinearLayout>
    
</LinearLayout>
